--- a/index.html
+++ b/index.html
@@ -1,53 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rosana Moreira</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
-  </head>
-  <body>
-    <header>
-      <div class="header-menu">
-        <div class="logo">
-          <a href="">
-            <img src="./assets/img/logo.png" alt="imagem logo" />
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Rosana Moreira</title>
+  <link rel="stylesheet" href="./assets/css/style.css" />
+  <link />
+</head>
+
+<body>
+  <header>
+    <div class="header-menu">
+      <div class="logo">
+        <a href="">
+          <img src="./assets/img/logo.png" alt="imagem logo" />
+        </a>
+      </div>
+      <div class="menu">
+        <ul>
+          <li>
+            <a href="#">Home</a>
+          </li>
+          <li>
+            <a href="#">Sobre mim</a>
+          </li>
+          <li>
+            <a href="#">Experiência</a>
+          </li>
+          <li>
+            <a href="#">Projetos</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </header>
+  <section class="main">
+    <div class="home">
+      <div class="name">
+        <h2>OLÁ, EU SOU</h2>
+        <h1>ROSANA MOREIRA</h1>
+        <h2>DESENVOLVEDORA FRONT-END JUNIOR</h2>
+      </div>
+      <div class="contact">
+        <a class="github" href="#">
+          <img src="assets/img/github.png" alt="" />
+          GitHub
+        </a>
+        <a class="linkedin" href="#">
+          <img src="assets/img/linkedin.png" alt="" />
+          LinkedIn
+        </a>
+      </div>
+  </section>
+  <section class="about-me">
+    <div class="container">
+      <div class="photo">
+        <img class="photo-perfil" src="./assets/img/foto.jpg" alt="" />
+
+      </div>
+      <div class="text">
+        <h2>SOBRE MIM</h2>
+        <h3>Minas Gerais</h3>
+        <span>Sou mineira, apaixonada por tecnologia principalmente por
+          desenvolvimento web.Graduada em Licenciatura em Computação(2019)
+          e pós graduada em Tecnologias de Desenvolvimento Web pelo
+          IFSUDEMINAS (2021). Possuo vivência em equipes que utilizam
+          metodologias ágeis (Scrum e Kanban) para apoiar o desenvolvimento,
+          além de conhecimentos nas linguagens de programação TypeScript,
+          JavaScript, Node.js React.js, HTML5, CSS3.</span>
+      </div>
+    </div>
+    <div class="social">
+      <ul>
+        <li>
+          <a href="#">
+            <img class="social-facebook" src="./assets/img/icon-face.png" alt="facebook" />
           </a>
-        </div>
-        <div class="menu">
-          <ul>
-            <li>
-              <a href="#">Home</a>
-            </li>
-            <li>
-              <a href="#">Sobre mim</a>
-            </li>
-            <li>
-              <a href="#">Experiência</a>
-            </li>
-            <li>
-              <a href="#">Projetos</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </header>
-    <main>
-      <div class="home">
-        <div class="name">
-          <h2>OLÁ, EU SOU</h2>
-          <h1>ROSANA MOREIRA</h1>
-          <h2>DESENVOLVEDORA FRONT-END JUNIOR</h2>
-        </div>
-        <div class="contact">
-          <a class="github" href="#"> GitHub </a>
-          <a class="linkedin" href="#"> LinkedIn </a>
-        </div>
-        <div class="img-main">
-            <img src="" alt="">
-        </div>
-      </div>
-    </main>
-  </body>
+        </li>
+        <li class="social-logo">
+          <a href="#">
+            <img class="social-twitter" src="./assets/img/icon-twitter.png" alt="twitter" />
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img class="social-instragam" src="./assets/img/icon-insta.png" alt="Instagram" />
+          </a>
+        </li>
+      </ul>
+    </div>
+
+    <div class="contact-about">
+      <a class="cloud" href="#">
+        <img src="assets/img/icon-cloud.png" alt="" />
+        Curriculo
+      </a>
+      <a class="mail" href="#">
+        <img src="assets/img/icon-mail.png" alt="" />
+        E-email
+      </a>
+
+
+
+  </section>
+</body>
+
 </html>
