--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Rosana Moreira</title>
-  <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="./assets/css/style.css"/>
+  <link rel="stylesheet" href="./assets/css/responsive.css"/>
 </head>
 
 <body>
@@ -120,7 +121,7 @@
 
       <div class="project-02">
 
-        <img class="img-project" src="./assets/img/project-01.png" alt="" />
+        <img class="img-project" src="./assets/img/project-02.png" alt="" />
         <h2>Nome do Projeto</h2>
         <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
           Phasellus blandit interdum odio eu varius.</span>
